[package]
name = "hatebu2bsky"
version = "0.1.0"
edition = "2021"
description = "Hatena bookmark to bluesky"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
async-trait = "0.1.77"
atrium-api = { version = "0.18.0", default-features = false }
http = "0.2.9"
js-sys = "=0.3.63"
rss = { version = "2.0.7", default-features = false }
url = "2.5.0"
wasm-bindgen = "=0.2.86"
webpage = { version = "2.0.0", default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1
